# can-crusher

./: .gitignore  .gitmodules  README.md
bom/: Bill of Materials.ods
cad/: can-crusher.FCStd  can-crusher.FCStd1
control-software/: .gitignore  can-crusher-cli  can-crusher-pi  can_crusher.py  slide-maker.py  spi_display.py  touch_screen.py
control-software/can_crusher/: config.py
firmware/pico/: CMakeLists.txt  README.md  button.c  button.h  can-crusher.c  led.c  led.h  motor.c  motor.h  power.c  power.h  power_management.c  power_management.h  property.c  property.h  serial.c  serial.h  step.pio
firmware/scripts/: crush-can  find_stallguard_point  find_stallguard_point.py  serial_cli.py
freecad/: can-crusher.FCStd  can-crusher.FCStd1
kicad/can-crusher/: .gitignore  (+7 more)
step/: crusher-element-cnc.step  crusher-element-laser.step  crusher-element-with-bearing-holders.step  crusher-element.step  frame-ends.step  lead_holder_test.step
stl/: base-with-feet.stl  can-holder-with-smooth-rod-holder.stl  can-holder.stl  crusher-element-with-bearing-holders.stl  crusher-plate.stl  frame-plates.stl  pcb-holder-high-pico.stl  pcb-holder-lid-dev-access.stl  pcb-holder-lid.stl  pcb-holder-pico-on-header.stl  pcb-holder.stl  rod-holder.stl  servo-holder.stl  smooth-rod-holder-top.stl  stepper-holder.stl  test-rail-guide.stl  touch-screen-front.stl  touch-screen-left.stl  touch-screen-right.stl  vertical-bearing-holder.stl  weight-tray.stl
ui-software/: .gitignore  README.md  can-crusher-cli  can-crusher-pi  can-crusher.service.example  requirements.txt  slide-maker
(+52 files in other folders)
